Fixed some bugs. Addedd translate for cart, likes, products

--- a/src/common/i18n/locales/rus/translation.json
+++ b/src/common/i18n/locales/rus/translation.json
@@ -30,7 +30,8 @@
         "delivery": "ДОСТАВКА",
         "cart": "КОРЗИНА",
         "like-title": "ЖЕЛАЕМОЕ",
-        "user-info-title": "ЛИЧНАЯ ИНФОРМАЦИЯ"
+        "user-info-title": "ЛИЧНАЯ ИНФОРМАЦИЯ",
+        "catalog-title": "КАТАЛОГ ПРОДУКЦИИ"
     },
     "header": {
         "sign-up-and-get-discount": "ЗАРЕГИСТРИРОВАТЬСЯ И ПОЛУЧИТЬ СКИДКУ 10%",
@@ -65,6 +66,8 @@
         "change-user-data": "Невозможно изменить данные пользователя"
     },
     "messages": {
-        "success-sign-up": "Успешная регистрация, код подтверждения отправлен на вашу электронную почту. Теперь вы можете войти."
+        "success-sign-up": "Успешная регистрация, код подтверждения отправлен на вашу электронную почту. Теперь вы можете войти.",
+        "add-like": "Вы добавили {{title}} в список желаемого",
+        "remove-like": "Вы удалили {{title}} из списка желаемого"
     }
 }
