--- a/src/common/i18n/locales/ukr/translation.json
+++ b/src/common/i18n/locales/ukr/translation.json
@@ -30,7 +30,8 @@
         "delivery": "ДОСТАВКА",
         "cart": "КОШИК",
         "like-title": "БАЖАНЕ",
-        "user-info-title": "ОСОБИСТА ІНФОРМАЦІЯ"
+        "user-info-title": "ОСОБИСТА ІНФОРМАЦІЯ",
+        "catalog-title": "КАТАЛОГ ПРОДУКЦІЇ"
     },
     "header": {
         "sign-up-and-get-discount": "ЗАРЕЄСТРУВАТИСЯ ТА ОТРИМАТИ ЗНИЖКУ 10%",
@@ -65,6 +66,8 @@
         "change-user-data": "Неможливо змінити дані користувача"
     },
     "messages": {
-        "success-sign-up": "Успішна реєстрація, код підтвердження надіслано на вашу електронну пошту. Тепер ви можете увійти."
+        "success-sign-up": "Успішна реєстрація, код підтвердження надіслано на вашу електронну пошту. Тепер ви можете увійти.",
+        "add-like": "Ви додали {{title}} до списку побажань.",
+        "remove-like": "Ви видалили {{title}} зі списку побажань."
     }
 }
