--- a/src/common/i18n/locales/rus/translation.json
+++ b/src/common/i18n/locales/rus/translation.json
@@ -68,6 +68,8 @@
     "messages": {
         "success-sign-up": "Успешная регистрация, код подтверждения отправлен на вашу электронную почту. Теперь вы можете войти.",
         "add-like": "Вы добавили {{title}} в список желаемого",
-        "remove-like": "Вы удалили {{title}} из списка желаемого"
+        "remove-like": "Вы удалили {{title}} из списка желаемого",
+        "add-cart": "Вы добавили {{title}} в корзину",
+        "remove-cart": "Вы добавили {{title}} в корзину"
     }
 }
