--- a/src/common/i18n/locales/ukr/translation.json
+++ b/src/common/i18n/locales/ukr/translation.json
@@ -68,6 +68,8 @@
     "messages": {
         "success-sign-up": "Успішна реєстрація, код підтвердження надіслано на вашу електронну пошту. Тепер ви можете увійти.",
         "add-like": "Ви додали {{title}} до списку побажань.",
-        "remove-like": "Ви видалили {{title}} зі списку побажань."
+        "remove-like": "Ви видалили {{title}} зі списку побажань.",
+        "add-cart": "Ви додали {{title}} до корзини",
+        "remove-cart": "Ви додали {{title}} до корзини"
     }
 }
